fixed clipping at higher resolutions

--- a/parallaxdemo/styles.css
+++ b/parallaxdemo/styles.css
@@ -13,8 +13,6 @@ body {
     position: relative;
     transform-style: preserve-3d;
     width:100%;
-    margin:0 auto;
-    margin-top:-10%;
     min-height: 630px;
     min-width: 550px;
     overflow: auto;
@@ -34,7 +32,7 @@ body {
 }
 .overlay h1{
     font-size: 300%;
-    margin-bottom: 0;
+    margin: 0;
 }
 .attrib{
     font-size: 70%;
